# fastapi-book

./: pyproject.toml
chapter_1/: info.txt
chapter_13/: main.py
chapter_14/: main.py  sql.py
chapter_15/: main.py
chapter_16/: main.py
chapter_16/template/: list.html
chapter_17/: load_csv.py  main.py
chapter_18/: main.py
chapter_18/template/: game.html
chapter_2/: info.txt  main.py
chapter_3/: hello.py
chapter_4/: dullness.py  generators.py  hilarity.py  main.py
chapter_5/: data.py  dataclasse.py  main.py  type_hinting.py
chapter_6/: main.py
chapter_7/: main.py
cryptids/src/: auth.py  main.py
cryptids/src/data/: creature.py  explorer.py  init.py  user.py
cryptids/src/fake/: creature.py  explorer.py  user.py
cryptids/src/service/: creature.py  explorer.py  user.py
cryptids/src/test/unit/data/: test_creature.py
cryptids/src/test/unit/service/: test_creature.py
cryptids/src/test/unit/web/: test_creature.py
cryptids/src/web/: creature.py  explorer.py  user.py
