[project]
name = "fastapi-book"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "aiofiles>=25.1.0",
    "country-converter>=1.3.1",
    "fastapi[standard]>=0.118.0",
    "huggingface-hub[hf-xet]>=0.35.3",
    "kaleido>=1.1.0",
    "pandas>=2.3.3",
    "passlib>=1.7.4",
    "plotly>=6.3.1",
    "pytest>=8.4.2",
    "pytest-mock>=3.15.1",
    "python-jose[cryptography]>=3.5.0",
    "python-multipart>=0.0.20",
    "sqlalchemy>=2.0.44",
    "tabulate>=0.9.0",
    "torch>=2.9.0",
    "torchvision>=0.24.0",
    "transformers>=4.57.1",
]
